--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
   "name": "phrasebook",
-  "version": "0.0.0",
+  "version": "0.1.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node app.js"
   },
   "dependencies": {
     "async": "~2.0.0-rc.2",
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "~1.13.3",
+    "connect-mongo": "^1.3.2",
     "character-parser": "^2.2.0",
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
@@ -17,6 +18,6 @@
     "jade": "^1.11.0",
     "mongoose": "~4.4.10",
     "morgan": "~1.6.1",
-    "serve-favicon": "~2.3.0"
+    "serve-favicon": "^2.3.0"
   }
 }
