--- a/package.json
+++ b/package.json
@@ -6,18 +6,20 @@
     "start": "node app.js"
   },
   "dependencies": {
-    "async": "~2.0.0-rc.2",
+    "async": "^2.0.1",
     "bcrypt-nodejs": "0.0.3",
-    "body-parser": "~1.13.3",
+    "body-parser": "^1.15.2",
     "connect-mongo": "^1.3.2",
-    "character-parser": "^2.2.0",
-    "cookie-parser": "~1.3.5",
-    "debug": "~2.2.0",
-    "express": "~4.13.4",
-    "express-session": "~1.13.0",
-    "jade": "^1.11.0",
-    "mongoose": "~4.4.10",
-    "morgan": "~1.6.1",
+    "cookie-parser": "^1.4.3",
+    "express": "^4.14.0",
+    "express-react-views": "^0.10.2",
+    "express-session": "^1.14.0",
+    "jquery": "^3.1.0",
+    "mongodb": "^2.2.5",
+    "mongoose": "^4.5.7",
+    "pug": "^2.0.0-beta6",
+    "react": "^15.3.1",
+    "react-dom": "^15.3.1",
     "serve-favicon": "^2.3.0"
   }
 }
