--- a/package.json
+++ b/package.json
@@ -12,14 +12,12 @@
     "connect-mongo": "^1.3.2",
     "cookie-parser": "^1.4.3",
     "express": "^4.14.0",
-    "express-react-views": "^0.10.2",
     "express-session": "^1.14.0",
     "jquery": "^3.1.0",
     "mongodb": "^2.2.5",
     "mongoose": "^4.5.7",
     "pug": "^2.0.0-beta6",
     "react": "^15.3.1",
-    "react-dom": "^15.3.1",
-    "serve-favicon": "^2.3.0"
+    "react-dom": "^15.3.1"
   }
 }
