--- a/package.json
+++ b/package.json
@@ -16,8 +16,6 @@
     "jquery": "^3.1.0",
     "mongodb": "^2.2.5",
     "mongoose": "^4.5.7",
-    "pug": "^2.0.0-beta6",
-    "react": "^15.3.1",
-    "react-dom": "^15.3.1"
+    "pug": "^2.0.0-beta6"
   }
 }
