--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "cookie-parser": "^1.4.3",
     "express": "^4.14.0",
     "express-session": "^1.14.0",
+    "inversify": "^2.0.0",
     "jquery": "^3.1.0",
     "mongodb": "^2.2.5",
     "mongoose": "^4.5.7",
-    "pug": "^2.0.0-beta6"
+    "pug": "^2.0.0-beta6",
+    "reflect-metadata": "^0.1.8"
   }
 }
