--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "start": "node app.js"
+    "start": "node app.js 8080 '/phrasebook' '/'"
   },
   "dependencies": {
     "async": "^2.0.1",
