--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "jquery": "^3.1.0",
     "mongodb": "^2.2.5",
     "mongoose": "^4.5.7",
+    "nodemailer": "^2.6.4",
+    "nodemailer-sendmail-transport": "^1.0.0",
     "pug": "^2.0.0-beta6",
     "reflect-metadata": "^0.1.8"
   }
